      in the future to remove some of the state files.

    * Avoid data overhead when responding to /NAMES out of cache.

    * Add --check-running option.

    * The pid file is now read to check whether another instance of 
      ctrlproxy is already running.

    * ``bind'' is now also accepted in the global section of the network 
      configuration. (#194)

  BUG FIXES

    * Improve handling of empty pid files. (#186)

    * Handle out of disk space correctly. (#91)

    * Don't "forget" listener password.

    * Don't add all existing networks to autoconnect list. (#90)

    * Fix a couple of minor memory leaks.

    * Store CTCP ACTIONs for replication.

    * Warn about unknown networks listed for listeners rather than crash.

    * Fixed segfault when no conversion is being used. Patch by Ashish Shukla.

    * Don't use AI_ADDRCONFIG if it's not provided by the system.  (#179)

    * Fix segfault when address type is not reachable at the moment. (#177)
      Patch by wahjava@gmail.com.

    * Abort startup when one or more listener ports are already in use. 
      (#175)

    * Fix crash bug when client shuts down correctly. (#176)

    * Allow multi-character prefixes for users in channels.

    * Support EXTBAN parameter in 005 lines.

    * Handle 008 responses.

    * Cache more than just the first result returned in RPL_USERHOST.

    * Fix hostmask and response code returned by USERHOST in administration 
      network.

    * Fix timestamp marshalling. (#180)

    * Correctly recognize error responses to WHOIS and WHOWAS. (#136)

    * Actually remove networks from disk when they have been removed in 
      the configuration.

    * Parse removals of banlist entries correctly.

    * Correctly generate prefix when replicating users that have more 
      than one mode set. (Martin Meredith)

    * Support NICKSERV and CHANSERV commands when tracking messages.

    * Handle incomplete PREFIX lines. (#192)
